# lib_awe

./: .gitignore  .gitmodules  .xmos_ignore_source_check  CHANGELOG.rst  CMakeLists.txt  Jenkinsfile  Makefile  README.md  README.rst  index.rst  requirements.txt  settings.yml
app_uart/: CMakeLists.txt
app_uart/src/: awe_conf.h
app_uart/src/extensions/: user_main.h
app_uart/src/uart/: uart.h  uart_rx.c  uart_tx.c  uart_util.c  uart_util.h
app_usb_audio_awe/: CMakeLists.txt  Makefile
app_usb_audio_awe/doc/rst/: AWE_on_XCORE.rst  xdoc.conf
app_usb_audio_awe/src/: awe_conf.h  awe_usb.c  extra_hid.h
app_usb_audio_awe/src/core/: xk-audio-316-mc-700.xn  xua_conf.h
app_usb_audio_awe/src/extensions/: audiohw.xc  user_main.h
app_usb_audio_awe_small/: CMakeLists.txt  Makefile
app_usb_audio_awe_small/src/: awe_conf.h  static_hid_report.h
app_usb_audio_awe_small/src/extensions/: audiohw.xc
app_usb_audio_awe_small_qf60/: CMakeLists.txt  Makefile
app_usb_audio_awe_small_qf60/src/: awe_usb.c  extra_hid.h
app_usb_audio_awe_small_qf60/src/core/: xk-audio-316-qf60-700.xn
app_usb_audio_awe_small_qf60/src/extensions/: audiohw.xc  audiostream.xc
app_zoom_demo/: CMakeLists.txt
app_zoom_demo/src/: awe_conf.h
doc/: Doxyfile.inc  exclude_patterns.inc
doc/rst/: lib_awe.rst
doc/user_guide/: index.rst
doc/user_guide/images/: awe_example_ua.drawio  awe_example_ua_ffs.drawio  awe_example_ua_standalone.drawio  lib_awe.drawio
examples/app_usb_audio_awe/: CMakeLists.txt  Makefile  README.rst
examples/app_usb_audio_awe/src/: awe_audio.c  awe_conf.h  awe_standalone_tuning.c  awe_usb.c
examples/app_usb_audio_awe/src/core/: xk-audio-316-mc-700.xn  xua_conf.h
examples/app_usb_audio_awe/src/extensions/: XUD_HAL.xc  user_main.h  user_main_ffs.h  user_main_standalone.h
examples/app_usb_audio_awe_small/: CMakeLists.txt
examples/app_usb_audio_awe_small/src/: awe_conf.h  awe_usb.c  cs2100.h  static_hid_report.h
examples/app_usb_audio_awe_small/src/core/: xk-audio-316-mc-700.xn
examples/app_usb_audio_awe_small_qf60/: CMakeLists.txt  Makefile  README.rst  devl-94352b36  results.txt
examples/app_usb_audio_awe_small_qf60/src/: awe_conf.h  awe_usb.c
examples/app_usb_audio_awe_small_qf60/src/extensions/: audiohw.xc  user_main.h
examples/app_zoom_demo/: CMakeLists.txt  Makefile
examples/app_zoom_demo/src/: apppll.h  awe_conf.h  awe_usb.c
examples/app_zoom_demo/src/core/: xua_conf.h
examples/app_zoom_demo/src/extensions/: audiohw.xc
examples/audioweaver/: playBasic_3thread.awj  simple_volume.awd
examples/audioweaver/awb_files/: playBasic_3thread_InitAWB.h  simple_volume.awb  simple_volume_InitAWB.c
lib_awe/: lib_build_info.cmake  lib_build_info_sources.cmake  module_build_info
lib_awe/api/: awe_xcore.h
lib_awe/lib/xs1b/: readme.txt
lib_awe/lib/xs3a/: readme.txt
lib_awe/src/: awe_control.c  awe_control_interface.c  awe_control_interface.h  awe_data_path.c  awe_ffs_rpc.c  awe_ffs_rpc.h  awe_hid.c  awe_i2c_control.xc  awe_init.c  awe_main.c  awe_module_list.S  awe_module_list.S.edited  awe_tuning.c  awe_tuning_rom.c  awe_tuning_uart.c  awe_tuning_usb_hid.c  awe_xcore_internal.h
lib_awe/src/include_internal/: AWECore.h  AWECoreUtils.h  AWEInstance.h  Errors.h  FlashFSInstance.h  Generic_TargetProcessor.h  ModuleList.h  Pin.h  ProxyIDs.h  StandardDefs.h  TargetProcessor.h
src/: awe_init.c
src/include_internal/: Errors.h  FileInfo.h  Generic_TargetProcessor.h  TargetProcessor.h
tests/: awe_test_utils.py  conftest.py  hid_access.py  input_sine_2ch.json  pytest.ini  test_audio.py  test_basic.py  test_ffs.py  test_hw_stream.py  test_lib.py
tests/awb_files/: playBasic_3thread.awb  playBasic_3thread_InitAWB.c  playBasic_3thread_InitAWB.h  simple_volume_ControlInterface.h  simple_volume_ControlInterface_AWE6.h  simple_volume_InitAWB.c  simple_volume_InitAWB.h
tests/test_basic/: CMakeLists.txt
tests/test_basic/src/: awe_conf.h  test_awe_basic.c  xua_conf.h
tests/test_data_partition/: CMakeLists.txt
tests/test_data_partition/src/: awe_conf.h  test_awe_flash.c
tests/test_ffs/: CMakeLists.txt
tests/test_ffs/src/: awe_conf.h  test_awe_ffs_rpc.c  xua_conf.h
tests/test_ffs_awb_device/: CMakeLists.txt
tests/test_ffs_awb_device/src/: awe_conf.h  test_ffs_awb.c
tests/test_ffs_rpc/: CMakeLists.txt
tests/test_ffs_rpc/src/: awe_conf.h  config.xscope  test_awe_ffs_rpc.c  xua_conf.h
tests/test_xawe_if/: CMakeLists.txt
tests/test_xawe_if/src/: awe_conf.h  test_xawe_if.c
tests/tools/: Makefile-awe_hid_transfer  Makefile-linux  Makefile-mac  awe_hid_transfer.c
